# xpeech

./: LICENSE  README.md  config.toml  main.py  pyproject.toml  settings.py
xpeech/: __main__.py  app.py  model.py
xpeech/agent/: agent.py  loop.py  model.py
xpeech/agent/compress/: summary_agent.py
xpeech/agent/tool/: filesystem.py
xpeech/bus/: message_queue.py
xpeech/channel/: bus.py  restful.py
xpeech/model/: enum.py  message.py
xpeech/utils/: async_util.py  helper.py  log_util.py  retry.py  token_util.py
